release 1.1.2-ea (2009-09)
- Fixed issue 343
  https://jersey.dev.java.net/issues/show_bug.cgi?id=343
  The ResourceConfig property
    PROPERTY_DEFAULT_RESOURCE_COMPONENT_PROVIDER_FACTORY_CLASS
  additional supports a Java type that is a String whose value is a Class name.
- Fixed issue 332
  https://jersey.dev.java.net/issues/show_bug.cgi?id=332
  If an Content-Type header is recieved with an empty value a 400 
  response is returned.
- Fixed issue 350
  https://jersey.dev.java.net/issues/show_bug.cgi?id=350
  Errors when processing a parameter, annotated with an @*Param annotation,
  will result in an instance of ParamException (that extends WebApplicaton)
  being thrown concrete instance of which reflect the particular parameter
  involved.
  See com.sun.jersey.api.ParamException and inheriting classes for
  more details.
- Fixed issue 338
  https://jersey.dev.java.net/issues/show_bug.cgi?id=338
  Ensure correct array element separator (',') is used also
  in case an array is recognized based on configuration option.
- Fixed issue 242
  https://jersey.dev.java.net/issues/show_bug.cgi?id=242
  Client and server logging now uses a JDK logger to log requests and
  responses.
- Code to copy a from an input stream or reader to an output stream or writer
  has been consolidated. In addition functions that require the use of byte
  or character arrays will use a default size for the array but this can
  be overridden if required (for performance reasons). See:
    com.sun.jersey.core.util.ReaderWriter
- Cleaned up the throwing of exceptions by message body readers and writers.
  If a known checked, or documented runtime, exception is thrown when
  reading then a WebApplcationException is thrown with the cause. If the
  exception is related to reading then a 400 (Client error) status code is
  set, otherwise a 500 (Internal server error) status code is set.
  If a known checked, or documented runtime, exception is thrown when