@@ -65,7 +65,10 @@ public interface HttpContext {
     HttpResponseContext getResponse();
     
     /**
-     * Get the mutable propertiee.
+     * Get the mutable properties.
+     * <p>
+     * Care should be taken not to clear the properties or remove properties
+     * that are unkown otherwise unspecified behaviour may result.
      * 
      * @return the properties.
      */
